--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "author": "Orestis Markozanes",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
+    "mongoose": "^5.4.15"
   }
 }
