--- a/package.json
+++ b/package.json
@@ -4,13 +4,22 @@
   "description": "An app demonstrating simple Restful API implementation",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "keywords": [
     "api",
     "restful",
-    "json"
+    "json",
+    "heroku"
   ],
+  "engines": {
+    "node": "10.11.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/MarkOrestis/ClearMindBackend"
+  },
   "author": "Orestis Markozanes",
   "license": "ISC",
   "dependencies": {
